Fixed margins on mobile view content area h1.

--- a/src/theme-gcwu-fegc/sass/includes/_default-mobile.scss
+++ b/src/theme-gcwu-fegc/sass/includes/_default-mobile.scss
@@ -164,7 +164,7 @@ table {
 	h1 {
 		font-size: 1.5em;
 		font-weight: 400;
-		margin: -3px;
+		margin: -3px -3px 10px -3px;
 		padding: 0 3px;
 		border: 1px solid #999;
 		border-width: 1px 0 0 0;
